# sibadi-web

./: Cargo.toml  Dioxus.toml  README.md
assets/: main.css  vars.css  widgets.css
src/: lib.rs  main.rs
src/handlers/: mod.rs  storage.rs
src/route/: mod.rs
src/route/app/: mod.rs  rasp.rs
src/route/setup/: mod.rs
src/types/: group.rs
tests/: storage.rs
