[package]
name = "sibadi-web"
version = "0.1.0"
authors = ["ouki"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
web-sys = { version = "0.3.77", features = ["Window", "CssStyleDeclaration"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
