[package]
name = "sibadi-web"
version = "0.1.0"
authors = ["ouki"]
edition = "2021"

[dev-dependencies]
dioxus-ssr = "0.6.2"
pretty_assertions = "1.4.1"
wasm-bindgen-test = "0.3.50"

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
web-sys = { version = "0.3.77", features = ["Window", "Storage", "CssStyleDeclaration"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
